--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <main class="content">
       <section class="description">
         <div class="two-columns">
-          <div class="two-columns__brief">
+          <h2 class="two-columns__brief">
             Главные проблемы в обучении
-          </div>
+          </h2>
           <div class="two-columns__main-text">
               <div class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</div>
               <div class="two-columns__paragraph two-columns__paragraph_indent"><span class="two-columns_bold">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</div>
@@ -148,10 +148,10 @@
           <div class="footer__column-heading">О Практикуме</div>
           <div class="footer__column-links">
             <ul class="footer__list">
-              <li class="footer__list-link">Главная</li>
-              <li class="footer__list-link">Концепция</li>
-              <li class="footer__list-link">Наставники</li>
-              <li class="footer__list-link">Соцсети</li>
+              <li class="footer__list-link"><a class="footer_link" href="#">Главная</a></li>
+              <li class="footer__list-link"><a class="footer_link" href="#">Концепция</a></li>
+              <li class="footer__list-link"><a class="footer_link" href="#">Наставники</a></li>
+              <li class="footer__list-link"><a class="footer_link" href="#">Соцсети</a></li>
             </ul>
           </div>
         </div>
@@ -159,9 +159,9 @@
           <div class="footer__column-heading">Соцсети</div>
           <div class="footer__column-links">
             <ul class="footer__list">
-              <li class="footer__list-link footer__list-link_facebook">Facebook</li>
-              <li class="footer__list-link footer__list-link_vk">Вконтакте</li>
-              <li class="footer__list-link footer__list-link_instagramm">Instagram</li>
+              <li class="footer__list-link footer__list-link_facebook"><a class="footer_link" href="#">Facebook</a></li>
+              <li class="footer__list-link footer__list-link_vk"><a class="footer_link" href="#">Вконтакте</a></li>
+              <li class="footer__list-link footer__list-link_instagramm"><a class="footer_link" href="#">Instagram</a></li>
             </ul>
           </div>
         </div>
