--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="header">
       <img src="images/logo_place_header.svg" alt="Яндекс Практикум" class="logo logo_place_header">
       <h1 class="header__heading">Научиться учиться</h1>
-      <p class="header__text">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a class="header__link page__link_hover" href="#">Узнать &rarr;</a></p>
+      <p class="header__text">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a class="header__link" href="#">Узнать &rarr;</a></p>
       <img class="header__main-illustration" src="images/header-image.png" alt="Научиться учиться">
       <div class="header__square-pic"></div>
     </header>
@@ -82,7 +82,7 @@
           <h2 class="feynman__title">Метод Фейнмана</h2>
           <p class="feynman__subtitle">Выучить и не забыть.</p>
         <!-- </div> -->
-        <a href="#" class="feynman__link page__link_hover">Подробнее &rarr;</a>
+        <a href="#" class="feynman__link">Подробнее &rarr;</a>
       </section>
 
       <section class="kaufman">
@@ -147,10 +147,10 @@
           <h3 class="footer__column-heading">О Практикуме</h3>
           <!-- <div class="footer__column-links"> -->
             <ul class="footer__column-links">
-              <li class="footer__list-link"><a class="footer__link page__link_hover" href="#">Главная</a></li>
-              <li class="footer__list-link"><a class="footer__link page__link_hover" href="#">Концепция</a></li>
-              <li class="footer__list-link"><a class="footer__link page__link_hover" href="#">Наставники</a></li>
-              <li class="footer__list-link"><a class="footer__link page__link_hover" href="#">Соцсети</a></li>
+              <li class="footer__list-link"><a class="footer__link" href="#">Главная</a></li>
+              <li class="footer__list-link"><a class="footer__link" href="#">Концепция</a></li>
+              <li class="footer__list-link"><a class="footer__link" href="#">Наставники</a></li>
+              <li class="footer__list-link"><a class="footer__link" href="#">Соцсети</a></li>
             </ul>
           <!-- </div> -->
         </nav>
@@ -158,9 +158,9 @@
           <h3 class="footer__column-heading">Соцсети</h3>
           <!-- <div class="footer__column-links"> -->
             <ul class="footer__column-links">
-              <li class="footer__list-link"><a class="footer__link page__link_hover" href="#"><img class="footer__link_social-logo" src='images/facebook_color_white.svg'>Facebook</a></li>
-              <li class="footer__list-link"><a class="footer__link page__link_hover" href="#"><img class="footer__link_social-logo" src="images/vk_color_white.svg">Вконтакте</a></li>
-              <li class="footer__list-link"><a class="footer__link page__link_hover" href="#"><img class="footer__link_social-logo" src="images/instagram_color_white.svg">Instagram</a></li>
+              <li class="footer__list-link"><a class="footer__link" href="#"><img class="footer__social-icon" src='images/facebook_color_white.svg' alt="Facebook">Facebook</a></li>
+              <li class="footer__list-link"><a class="footer__link" href="#"><img class="footer__social-icon" src="images/vk_color_white.svg" alt="Вконтакте">Вконтакте</a></li>
+              <li class="footer__list-link"><a class="footer__link" href="#"><img class="footer__social-icon" src="images/instagram_color_white.svg" alt="Instagram">Instagram</a></li>
             </ul>
           <!-- </div> -->
           </nav>
