--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
       <div class="kaufman__triangle"></div>
       </section>
     </main>
-
+<!-- фурер. Тест команды Amend -->
     <footer class="footer">
       <div class="footer__columns">
         <div class="footer__column footer__column_content_copyright">
