--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="header">
       <img src="images/logo_place_header.svg" alt="Яндекс Практикум" class="logo logo_place_header">
       <h1 class="header__heading">Научиться учиться</h1>
-      <p class="header__text">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a class="header__link" href="#">Узнать &rarr;</a></p>
+      <p class="header__text">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a class="header__link" href="#" target="_blank">Узнать &rarr;</a></p>
       <img class="header__main-illustration" src="images/header-image.png" alt="Научиться учиться">
       <div class="header__square-pic"></div>
     </header>
@@ -105,7 +105,7 @@
           <h2 class="feynman__title">Метод Фейнмана</h2>
           <p class="feynman__subtitle">Выучить и не забыть.</p>
         <!-- </div> -->
-        <a href="#" class="feynman__link">Подробнее &rarr;</a>
+        <a href="#" target="_blank" class="feynman__link">Подробнее &rarr;</a>
       </section>
 
       <section class="digits">
@@ -161,7 +161,7 @@
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
             <img class="khan__book-pic" src="images/khan-book.jpg" alt="Книга">
-            <a class="khan__buy-link" href="#">Купить книгу&nbsp;→</a>
+            <a class="khan__buy-link" href="#" target="_blank">Купить книгу&nbsp;→</a>
           </div>
 
         </div>
@@ -246,9 +246,9 @@
           <h3 class="footer__column-heading">О Практикуме</h3>
           <!-- <div class="footer__column-links"> -->
             <ul class="footer__column-links">
-              <li class="footer__list-link"><a class="footer__link" href="#">Главная</a></li>
-              <li class="footer__list-link"><a class="footer__link" href="#">Концепция</a></li>
-              <li class="footer__list-link"><a class="footer__link" href="#">Наставники</a></li>
+              <li class="footer__list-link"><a class="footer__link" href="#" target="_blank">Главная</a></li>
+              <li class="footer__list-link"><a class="footer__link" href="#" target="_blank">Концепция</a></li>
+              <li class="footer__list-link"><a class="footer__link" href="#" target="_blank">Наставники</a></li>
             </ul>
           <!-- </div> -->
         </nav>
@@ -256,9 +256,9 @@
           <h3 class="footer__column-heading">Соцсети</h3>
           <!-- <div class="footer__column-links"> -->
             <ul class="footer__column-links">
-              <li class="footer__list-link"><a class="footer__link" href="#"><img class="footer__social-icon" src='images/facebook_color_white.svg' alt="Facebook">Facebook</a></li>
-              <li class="footer__list-link"><a class="footer__link" href="#"><img class="footer__social-icon" src="images/vk_color_white.svg" alt="Вконтакте">Вконтакте</a></li>
-              <li class="footer__list-link"><a class="footer__link" href="#"><img class="footer__social-icon" src="images/instagram_color_white.svg" alt="Instagram">Instagram</a></li>
+              <li class="footer__list-link"><a class="footer__link" href="#" target="_blank"><img class="footer__social-icon" src='images/facebook_color_white.svg' alt="Facebook">Facebook</a></li>
+              <li class="footer__list-link"><a class="footer__link" href="#" target="_blank"><img class="footer__social-icon" src="images/vk_color_white.svg" alt="Вконтакте">Вконтакте</a></li>
+              <li class="footer__list-link"><a class="footer__link" href="#" target="_blank"><img class="footer__social-icon" src="images/instagram_color_white.svg" alt="Instagram">Instagram</a></li>
             </ul>
           <!-- </div> -->
           </nav>
