--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__text">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a class="header__link half-opacity" href="#" target="_blank">Узнать &rarr;</a></p>
       <img class="header__main-illustration" src="images/header-image.png" alt="Научиться учиться">
-      <div class="header__square-pic header__square-pic_rotation"></div>
+      <div class="header__square-pic rotation"></div>
     </header>
     <main class="content">
       <section class="description">
@@ -146,14 +146,13 @@
         <div class="khan__container">
           <p class="khan__author">Салман Хан</p>
           <h2 class="khan__title">Весь мир — школа</h2>
-          <!-- <blockquote></blockquote> -->
-          <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
-          <!-- <cite></cite> -->
+          <blockquote class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</blockquote>
+          
           <p class="khan__quote-author">Джордж Лукас</p>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
             <img class="khan__book-pic" src="images/khan-book.jpg" alt="Книга - Школа преобразование образования">
-            <a class="khan__buy-link half-opacity" href="#" target="_blank">Купить книгу&nbsp;→</a>
+            <a class="khan__buy-link half-opacity" href="#" target="_blank">Купить книгу→</a>
           </div>
         </div>
       </section>
@@ -205,7 +204,7 @@
                 <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
               </li>
           </ul>
-        <div class="kaufman__triangle kaufman__triangle_rotation"></div>
+        <div class="kaufman__triangle rotation"></div>
       </section>
 
       <section class="resources">
